<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView
        android:text="@string/introduction_words"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_start"
        android:id="@+id/buttonStart"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_stop"
        android:id="@+id/buttonStop"
        android:layout_alignBottom="@+id/buttonStart"
        android:layout_toEndOf="@+id/buttonStart" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GyroYz"
        android:id="@+id/textViewGyroYz"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/textViewClassTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GyroPx"
        android:id="@+id/textViewGyroPx"
        android:layout_below="@+id/textViewGyroYz"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="GyroRy"
        android:id="@+id/textViewGyroRy"
        android:layout_below="@+id/textViewGyroPx"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_class_y_default"
        android:id="@+id/textViewClassYResult"
        android:layout_alignTop="@+id/textViewGyroYz"
        android:layout_toEndOf="@+id/textViewGyroPx"
        android:layout_marginStart="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_class_p_default"
        android:id="@+id/textViewClassPResult"
        android:layout_alignTop="@+id/textViewGyroPx"
        android:layout_alignStart="@+id/textViewClassYResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_class_r_default"
        android:id="@+id/textViewClassRResult"
        android:layout_alignTop="@+id/textViewGyroRy"
        android:layout_alignStart="@+id/textViewClassPResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_euler_y_default"
        android:id="@+id/textViewEulerYResult"
        android:layout_alignTop="@+id/textViewClassYResult"
        android:layout_toEndOf="@+id/textViewClassPResult"
        android:layout_marginStart="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_euler_p_default"
        android:id="@+id/textViewEulerPResult"
        android:layout_alignTop="@+id/textViewClassPResult"
        android:layout_alignStart="@+id/textViewEulerYResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_euler_r_default"
        android:id="@+id/textViewEulerRResult"
        android:layout_alignTop="@+id/textViewClassRResult"
        android:layout_alignStart="@+id/textViewEulerPResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Class"
        android:id="@+id/textViewClassTitle"
        android:layout_below="@+id/buttonStart"
        android:layout_marginTop="25dp"
        android:layout_alignStart="@+id/textViewClassYResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Euler"
        android:id="@+id/textViewEulerTitle"
        android:layout_alignTop="@+id/textViewClassTitle"
        android:layout_alignStart="@+id/textViewEulerYResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_mark_y_default"
        android:id="@+id/textViewMarkYResult"
        android:layout_alignTop="@+id/textViewEulerYResult"
        android:layout_toEndOf="@+id/textViewEulerYResult"
        android:layout_marginStart="35dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Mark"
        android:id="@+id/textViewMarkTitle"
        android:layout_alignTop="@+id/textViewEulerTitle"
        android:layout_alignStart="@+id/textViewMarkYResult" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_mark_p_default"
        android:id="@+id/textViewMarkPResult"
        android:layout_below="@+id/textViewMarkYResult"
        android:layout_alignStart="@+id/textViewMarkYResult"
        android:layout_marginTop="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result_mark_r_default"
        android:id="@+id/textViewMarkRResult"
        android:layout_below="@+id/textViewMarkPResult"
        android:layout_alignStart="@+id/textViewMarkPResult"
        android:layout_marginTop="25dp" />

</RelativeLayout>
